responsiveness done, fixing scrollbar on landscape desktop

--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,5 +1,5 @@
 :root {
-  font-size: 100%;
+  font-size: calc(95% + 0.3vmin);
 }
 
 .body {
