--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -36,4 +36,5 @@
   display: flex;
   gap: 3vh;
   padding: 3vh 0;
+  padding-bottom: 10vh;
 }
