--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -17,13 +17,13 @@
 .header__form {
   width: calc(100% - 1rem);
   padding: 0.5rem;
-  padding-top: 1rem;
+  padding-top: 2vh;
 }
 
 .header__switch {
   transform: scale(1.3);
   position: absolute;
-  top: 14vh;
+  top: 12vh;
   right: 6vw;
   box-shadow: 0 0 8px rgba(0, 0, 0, 30%);
 }
@@ -49,7 +49,7 @@
   width: 65%;
   text-align: center;
   display: block;
-  font-size: 2rem;
+  font-size: 1.7rem;
   padding: 0.5rem;
 }
 
